--- a/app/views/chats/_chat_messages.html.erb
+++ b/app/views/chats/_chat_messages.html.erb
@@ -6,7 +6,7 @@
       <span class="text-xs text-gray-500 ml-2"><%= chat.created_at.strftime("%H:%M %d/%m/%Y") %></span>
     </div>
     <% if current_user == chat.user || current_user.role == "ADMIN" || current_user == @club.created_by || @club.club_members.find_by(user_id: current_user.id).role == "ADMIN" %>
-      <%= link_to "Delete", club_chat_path(@club, chat), method: :delete, data: { confirm: 'Are you sure?' }, class: "bg-red-600 hover:bg-red-700 text-white font-bold py-1 px-2 rounded text-sm", remote: true %>
+      <%= button_to "Delete", club_chat_path(@club, chat), method: :delete, data: { confirm: 'Are you sure?' }, class: "bg-red-600 hover:bg-red-700 text-white font-bold py-1 px-2 rounded text-sm", remote: true %>
     <% end %>
   </div>
 <% end %>
