--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,10 +19,10 @@
       <%= f.label :email, class: "block text-gray-300 text-sm font-bold mb-2" %>
       <%= f.email_field :email, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
     </div>
-    <% if current_user.admin? && current_user != @user %>
+    <% if current_user.role == "ADMIN" && current_user != @user %>
       <div class="mb-6">
         <%= f.label :role, class: "block text-gray-300 text-sm font-bold mb-2" %>
-        <%= f.select :role, User.roles.keys.map { |role| [role.capitalize, role] }, {}, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+        <%= f.select :role, options_for_select([["User", "USER"], ["Admin", "ADMIN"]], selected: @user.role), {}, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
       </div>
     <% end %>
     <div class="flex items-center justify-between">
